Change form link

--- a/NCLL/login.html
+++ b/NCLL/login.html
@@ -80,7 +80,7 @@
 	<h1 property="name" id="wb-cont">Sign in</h1>
 
 	<div class="wb-frmvld">
-		<form action="sip.html" method="get" id="sign-in">
+		<form action="select-licensee.html" method="get" id="sign-in">
 		<p>Please sign in to your web profile to access the NCLL Portal</p>
 		<div class="wb-frm">
 			<div class="form-group">
