--- a/NCLL/select-licensee.html
+++ b/NCLL/select-licensee.html
@@ -7,7 +7,7 @@
 
 <!-- Start DECoE customization -->
 		<title>
-			Login - NCLL portal - Spectrum licensing services - Innovation, Science and Economic Development Canada
+			Select licensee account - NCLL portal - Spectrum licensing services - Innovation, Science and Economic Development Canada
 		</title>
 <!-- End DECoE customization -->
 
@@ -74,21 +74,19 @@
 		<main property="mainContentOfPage" typeof="WebPageElement" class="container">
 
 <!-- Start page content -->
-	<h1 property="name" id="wb-cont">Sign in</h1>
+	<h1 property="name" id="wb-cont">Select licensee account</h1>
 
 	<div class="wb-frmvld">
 		<form action="select-licensee.html" method="get" id="sign-in">
-		<p>Please sign in to your web profile to access the NCLL Portal</p>
+		<p>Please select a licensee account</p>
 		<div class="wb-frm">
 			<div class="form-group">
-				<label for="username" class="required">
+				<label for="search">
 					<span class="field-name">
-						Username
-					</span>
-					<strong class="required small" aria-hidden="true">(required)</strong>
+						Search
+					</span>					
 				</label>
-				<input id="username" name="username" class="form-control " value="" type="text" required="required">
-				<p><a href="https://sms-sgs.ic.gc.ca/login/resetPassword">Forgot your username?</a></p>
+				<input id="search" name="search" class="form-control " value="" type="text" required="required">
 			</div>
 			<div class="form-group">
 				<label for="password" class="required">
