--- a/NCLL/select-licensee.html
+++ b/NCLL/select-licensee.html
@@ -42,7 +42,9 @@
 				margin-top: 1em;
 			}
 		/* Styles for this mockup */
-			
+			#cancel-button {
+				margin-top: 1em;
+			}
 		</style>
 <!-- End DECoE customization -->
 
@@ -77,37 +79,47 @@
 	<h1 property="name" id="wb-cont">Select licensee account</h1>
 
 	<div class="wb-frmvld">
-		<form action="select-licensee.html" method="get" id="sign-in">
 		<p>Please select a licensee account</p>
-		<div class="wb-frm">
-			<div class="form-group">
-				<label for="search">
-					<span class="field-name">
-						Search
-					</span>					
-				</label>
-				<input id="search" name="search" class="form-control " value="" type="text" required="required">
-			</div>
-			<div class="form-group">
-				<label for="password" class="required">
-					<span class="field-name">
-						Password
-					</span>
-					<strong class="required small" aria-hidden="true">(required)</strong>
-				</label>
-				<input id="password" name="password" class="form-control " value="" type="password" required="required">
-				<p><a href="https://sms-sgs.ic.gc.ca/login/resetPassword">Forgot your password?</a></p>
-			</div>
-		</div>
-		<button class="btn btn-primary" type="submit">Sign in</button>
-		<p><a href="https://ised-isde.canada.ca/site/spectrum-management-system/en/online-registration">Register</a> if you are a new user.</p>
+		<table class="wb-tables table">
+			<thead>
+				<tr>
+					<th data-orderable="false">Select</th>
+					<th>Licensee name</th>
+					<th>Licensee number</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><a href="dashboard.html">Select</a></td>
+					<td>The best company</td>
+					<td>10000005465346</td>
+				</tr>
+				<tr>
+					<td><a href="dashboard.html">Select</a></td>
+					<td>A different company</td>
+					<td>10000005422541</td>
+				</tr>
+				<tr>
+					<td><a href="dashboard.html">Select</a></td>
+					<td>Another different company</td>
+					<td>10000003231298</td>
+				</tr>
+				<tr>
+					<td><a href="dashboard.html">Select</a></td>
+					<td>Not a bad company all things considered</td>
+					<td>10000003420001</td>
+				</tr>
+			</tbody>
+		</table>
+
+		<p><a href="dashboard.html" class="btn btn-default" id="cancel-button">Cancel</a></p>
+
 		<div class="notesaboutmockup">
 			<h2>Notes about this mockup:</h2>
 			<ul>
-				<li>Ensure the links on this page are correct</li>
+				<li>Uses the <a href="https://wet-boew.github.io/v4.0-ci/docs/ref/tables/tables-en.html">DataTables plugin for WET</a></li>
 			</ul>
 		</div>
-		</form>
 	</div>
 
 <!-- End page content -->
